version/0.42/_sources/api/solver/_autosummary/settings/field_name.rst.txt
:orphan:

.. _field_name:

field_name
==========

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.field_name
    :show-inheritance:

.. rubric:: Included in:

========================================================================================================   =========================================================================================================================================

Parent                                                                                                                                                                                                                                       Summary

========================================================================================================   =========================================================================================================================================
:ref:`mrf_omega <mrf_omega>`                                                                                                                                                                                         Reference Frame Rotation Speed.

:ref:`reference_frame_velocity_child <reference_frame_velocity_child>`                                                                                                                              'child_object_type' of reference_frame_velocity.

:ref:`reference_frame_axis_origin_child <reference_frame_axis_origin_child>`                                                                                                                     'child_object_type' of reference_frame_axis_origin.

:ref:`reference_frame_axis_direction_child <reference_frame_axis_direction_child>`                                                                                                            'child_object_type' of reference_frame_axis_direction.

:ref:`mgrid_omega <mgrid_omega>`                                                                                                                                                                                         Moving Mesh Rotation Speed.

:ref:`moving_mesh_velocity_child <moving_mesh_velocity_child>`                                                                                                                                          'child_object_type' of moving_mesh_velocity.

:ref:`moving_mesh_axis_origin_child <moving_mesh_axis_origin_child>`                                                                                                                                 'child_object_type' of moving_mesh_axis_origin.

:ref:`moving_mesh_axis_direction_child <moving_mesh_axis_direction_child>`                                                                                                                        'child_object_type' of moving_mesh_axis_direction.

:ref:`direction_1_vector_child <direction_1_vector_child>`                                                                                                                                                'child_object_type' of direction_1_vector.

:ref:`direction_2_vector_child <direction_2_vector_child>`                                                                                                                                                'child_object_type' of direction_2_vector.

:ref:`viscous_resistance_child <viscous_resistance_child>`                                                                                                                                                'child_object_type' of viscous_resistance.

:ref:`inertial_resistance_child <inertial_resistance_child>`                                                                                                                                             'child_object_type' of inertial_resistance.

:ref:`porosity <porosity>`                                                                                                                                                                                                                 Porosity.

:ref:`area_density <area_density>`                                                                                                                                                                                         Interfacial Area Density.

:ref:`heat_transfer_coeff <heat_transfer_coeff>`                                                                                                                                                                          Heat Transfer Coefficient.

:ref:`rad_porous_wall_in_emiss <rad_porous_wall_in_emiss>`                                                                                                                                                                      Internal Emissivity.

:ref:`terms_child_child <terms_child_child>`                                                                                                                                                               'child_object_type' of child_object_type.

:ref:`variables_child <variables_child>`                                                                                                                                                                           'child_object_type' of variables.

:ref:`wetsteam_young_alpha <wetsteam_young_alpha>`                                                                                                                                       The parameter Alpha for Young model of droplet growth rate.

:ref:`wetsteam_young_beta <wetsteam_young_beta>`                                                                                                                                          The parameter Beta for Young model of droplet growth rate.

:ref:`axis_direction_1_child <axis_direction_1_child>`                                                                                                                                                        'child_object_type' of axis_direction.

:ref:`axis_origin_1_child <axis_origin_1_child>`                                                                                                                                                                 'child_object_type' of axis_origin.

:ref:`solid_omega <solid_omega>`                                                                                                                                                                                          Solid Body Rotation Speed.

:ref:`solid_motion_axis_direction_child <solid_motion_axis_direction_child>`                                                                                                                     'child_object_type' of solid_motion_axis_direction.

:ref:`solid_motion_axis_origin_child <solid_motion_axis_origin_child>`                                                                                                                              'child_object_type' of solid_motion_axis_origin.

:ref:`solid_motion_velocity_child <solid_motion_velocity_child>`                                                                                                                                       'child_object_type' of solid_motion_velocity.

:ref:`omega_1 <omega_1>`                                                                                                                                                               Rotational velocity of the zone about the origin of rotation.

:ref:`gauge_pressure <gauge_pressure>`                                                                                                                                                                                               Gauge Pressure.

:ref:`flow_direction_child <flow_direction_child>`                                                                                                                                                            'child_object_type' of flow_direction.

:ref:`target_mass_flow <target_mass_flow>`                                                                                                                                                                                         Target Mass Flow.

:ref:`upper_limit_of_abs_pressure <upper_limit_of_abs_pressure>`                                                                                                                                                   Upper Limit of Absolute Pressure.

:ref:`lower_limit_of_abs_pressure <lower_limit_of_abs_pressure>`                                                                                                                                                   Lower Limit of Absolute Pressure.

:ref:`incoming_wave <incoming_wave>`                                                                                                                                                                                                  Incoming wave.

:ref:`strength <strength>`                                                                                                                                                                                                                 Strength.

:ref:`backflow_modified_turbulent_viscosity <backflow_modified_turbulent_viscosity>`                                                                                                                                   Modified Turbulent Viscosity.

:ref:`backflow_laminar_kinetic_energy <backflow_laminar_kinetic_energy>`                                                                                                                                                     Laminar Kinetic Energy.

:ref:`backflow_intermittency <backflow_intermittency>`                                                                                                                                                                                Intermittency.

:ref:`backflow_turbulent_kinetic_energy <backflow_turbulent_kinetic_energy>`                                                                                                                                               Turbulent Kinetic Energy.

:ref:`backflow_turbulent_dissipation_rate <backflow_turbulent_dissipation_rate>`                                                                                                                                         Turbulent Dissipation Rate.

:ref:`backflow_specific_dissipation_rate <backflow_specific_dissipation_rate>`                                                                                                                                            Specific Dissipation Rate.

:ref:`backflow_velocity_variance_scale <backflow_velocity_variance_scale>`                                                                                                                                                  Velocity Variance Scale.

:ref:`backflow_turbulent_viscosity_ratio_profile <backflow_turbulent_viscosity_ratio_profile>`                                                                                                                            Turbulent Viscosity Ratio.

:ref:`backflow_uu_reynolds_stresses <backflow_uu_reynolds_stresses>`                                                                                                                                                           UU Reynolds Stresses.

:ref:`backflow_vv_reynolds_stresses <backflow_vv_reynolds_stresses>`                                                                                                                                                           VV Reynolds Stresses.

:ref:`backflow_ww_reynolds_stresses <backflow_ww_reynolds_stresses>`                                                                                                                                                           WW Reynolds Stresses.

:ref:`backflow_uv_reynolds_stresses <backflow_uv_reynolds_stresses>`                                                                                                                                                           UV Reynolds Stresses.

:ref:`backflow_vw_reynolds_stresses <backflow_vw_reynolds_stresses>`                                                                                                                                                           VW Reynolds Stresses.

:ref:`backflow_uw_reynolds_stresses <backflow_uw_reynolds_stresses>`                                                                                                                                                           UW Reynolds Stresses.

:ref:`subgrid_kinetic_energy <subgrid_kinetic_energy>`                                                                                                                                                                       Subgrid Kinetic Energy.

:ref:`backflow_total_temperature <backflow_total_temperature>`                                                                                                                                                                          Temperature.

:ref:`direct_irradiation_child <direct_irradiation_child>`                                                                                                                                                'child_object_type' of direct_irradiation.

:ref:`beam_direction_child <beam_direction_child>`                                                                                                                                                            'child_object_type' of beam_direction.

:ref:`diffuse_irradiation_child <diffuse_irradiation_child>`                                                                                                                                             'child_object_type' of diffuse_irradiation.

:ref:`internal_emissivity <internal_emissivity>`                                                                                                                                                                                Internal Emissivity.

:ref:`mean_mixture_fraction <mean_mixture_fraction>`                                                                                                                                                                          Mean Mixture Fraction.

:ref:`secondary_mean_mixture_fraction <secondary_mean_mixture_fraction>`                                                                                                                                            Secondary Mean Mixture Fraction.

:ref:`mixture_fraction_variance <mixture_fraction_variance>`                                                                                                                                                              Mixture Fraction Variance.

:ref:`secondary_mixture_fraction_variance <secondary_mixture_fraction_variance>`                                                                                                                                Secondary Mixture Fraction Variance.

:ref:`backflow_species_mass_fraction_child <backflow_species_mass_fraction_child>`                                                                                                            'child_object_type' of backflow_species_mass_fraction.

:ref:`species_mole_fraction_child <species_mole_fraction_child>`                                                                                                                                       'child_object_type' of species_mole_fraction.

:ref:`backflow_mixture_fraction <backflow_mixture_fraction>`                                                                                                                                                                       Mixture fraction.

:ref:`backflow_mode_2_probability <backflow_mode_2_probability>`                                                                                                                                                                 Mode-2 probability.

:ref:`backflow_mode_3_probability <backflow_mode_3_probability>`                                                                                                                                                                 Mode-3 probability.

:ref:`backflow_progress_variable <backflow_progress_variable>`                                                                                                                                                                    Progress Variable.

:ref:`backflow_progress_variable_variance <backflow_progress_variable_variance>`                                                                                                                                         Progress Variable Variance.

:ref:`backflow_flame_area_density <backflow_flame_area_density>`                                                                                                                                                                 Flame Area Density.

:ref:`backflow_inert_stream <backflow_inert_stream>`                                                                                                                                                                                   Inert Stream.

:ref:`backflow_pollutant_no_mass_fraction <backflow_pollutant_no_mass_fraction>`                                                                                                                                         Pollutant NO Mass Fraction.

:ref:`backflow_pollutant_hcn_mass_fraction <backflow_pollutant_hcn_mass_fraction>`                                                                                                                                      Pollutant HCN Mass Fraction.

:ref:`backflow_pollutant_nh3_mass_fraction <backflow_pollutant_nh3_mass_fraction>`                                                                                                                                      Pollutant NH3 Mass Fraction.

:ref:`backflow_pollutant_n2o_mass_fraction <backflow_pollutant_n2o_mass_fraction>`                                                                                                                                      Pollutant N2O Mass Fraction.

:ref:`backflow_pollutant_urea_mass_fraction <backflow_pollutant_urea_mass_fraction>`                                                                                                                                   Pollutant UREA Mass Fraction.

:ref:`backflow_pollutant_hnco_mass_fraction <backflow_pollutant_hnco_mass_fraction>`                                                                                                                                   Pollutant HNCO Mass Fraction.

:ref:`backflow_pollutant_nco_mass_fraction <backflow_pollutant_nco_mass_fraction>`                                                                                                                                      Pollutant NCO Mass Fraction.

:ref:`backflow_pollutant_so2_mass_fraction <backflow_pollutant_so2_mass_fraction>`                                                                                                                                      Pollutant SO2 Mass Fraction.

:ref:`backflow_pollutant_h2s_mass_fraction <backflow_pollutant_h2s_mass_fraction>`                                                                                                                                      Pollutant H2S Mass Fraction.

:ref:`backflow_pollutant_so3_mass_fraction <backflow_pollutant_so3_mass_fraction>`                                                                                                                                      Pollutant SO3 Mass Fraction.

:ref:`backflow_pollutant_sh_mass_fraction <backflow_pollutant_sh_mass_fraction>`                                                                                                                                         Pollutant SH Mass Fraction.

:ref:`backflow_pollutant_so_mass_fraction <backflow_pollutant_so_mass_fraction>`                                                                                                                                         Pollutant SO Mass Fraction.

:ref:`backflow_soot_mass_fraction <backflow_soot_mass_fraction>`                                                                                                                                                                 Soot Mass Fraction.

:ref:`backflow_nuclei <backflow_nuclei>`                                                                                                                                                                                                     Nuclei.

:ref:`backflow_tar_mass_fraction <backflow_tar_mass_fraction>`                                                                                                                                                                    Tar Mass Fraction.

:ref:`backflow_pollutant_hg_mass_fraction <backflow_pollutant_hg_mass_fraction>`                                                                                                                                         Pollutant HG Mass Fraction.

:ref:`backflow_pollutant_hgcl2_mass_fraction <backflow_pollutant_hgcl2_mass_fraction>`                                                                                                                                Pollutant HGCL2 Mass Fraction.

:ref:`backflow_pollutant_hcl_mass_fraction <backflow_pollutant_hcl_mass_fraction>`                                                                                                                                      Pollutant HCL Mass Fraction.

:ref:`backflow_pollutant_hgo_mass_fraction <backflow_pollutant_hgo_mass_fraction>`                                                                                                                                      Pollutant HGO Mass Fraction.

:ref:`backflow_pollutant_cl_mass_fraction <backflow_pollutant_cl_mass_fraction>`                                                                                                                                         Pollutant CL Mass Fraction.

:ref:`backflow_pollutant_cl2_mass_fraction <backflow_pollutant_cl2_mass_fraction>`                                                                                                                                      Pollutant CL2 Mass Fraction.

:ref:`backflow_pollutant_hgcl_mass_fraction <backflow_pollutant_hgcl_mass_fraction>`                                                                                                                                   Pollutant HGCL Mass Fraction.

:ref:`backflow_pollutant_hocl_mass_fraction <backflow_pollutant_hocl_mass_fraction>`                                                                                                                                   Pollutant HOCL Mass Fraction.

:ref:`tss_scalar_child <tss_scalar_child>`                                                                                                                                                                        'child_object_type' of tss_scalar.

:ref:`free_surface_level <free_surface_level>`                                                                                                                                                                                   Free Surface Level.

:ref:`bottom_level <bottom_level>`                                                                                                                                                                                                     Bottom Level.

:ref:`backflow_granular_temperature <backflow_granular_temperature>`                                                                                                                                                           Granular temperature.

:ref:`backflow_interfacial_area_concentration <backflow_interfacial_area_concentration>`                                                                                                                             Interfacial area concentration.

:ref:`backflow_level_set_function_flux <backflow_level_set_function_flux>`                                                                                                                                                  Level-set Function Flux.

:ref:`backflow_volume_fraction <backflow_volume_fraction>`                                                                                                                                                                          Volume Fraction.

:ref:`discrete_boundary_value_child <discrete_boundary_value_child>`                                                                                                                                 'child_object_type' of discrete_boundary_value.

:ref:`quadrature_moment_boundary_value_child <quadrature_moment_boundary_value_child>`                                                                                                      'child_object_type' of quadrature_moment_boundary_value.

:ref:`qbmm_boundary_value_child <qbmm_boundary_value_child>`                                                                                                                                             'child_object_type' of qbmm_boundary_value.

:ref:`std_moment_boundary_value_child <std_moment_boundary_value_child>`                                                                                                                           'child_object_type' of std_moment_boundary_value.

:ref:`dqmom_boundary_value_child <dqmom_boundary_value_child>`                                                                                                                                          'child_object_type' of dqmom_boundary_value.

:ref:`backflow_relative_humidity <backflow_relative_humidity>`                                                                                                                                                           Backflow Relative humidity.

:ref:`backflow_liquid_mass_fraction <backflow_liquid_mass_fraction>`                                                                                                                                                  Backflow Liquid Mass Fraction.

:ref:`backflow_log10_droplets_per_unit_volume <backflow_log10_droplets_per_unit_volume>`                                                                                                                   Backflow Log10(Droplets Per Unit Volume).

:ref:`potential_boundary_value <potential_boundary_value>`                                                                                                                                                       Potential or Current density Value.

:ref:`current_density_boundary_value <current_density_boundary_value>`                                         Defines the current density value at a boundary for electrochemical simulations, used to model charge transfer or electrode behavior.

:ref:`x_disp_boundary_value <x_disp_boundary_value>`                                                                                                                                                                  X-Displacement Boundary value.

:ref:`y_disp_boundary_value <y_disp_boundary_value>`                                                                                                                                                                  Y-Displacement Boundary Value.

:ref:`z_disp_boundary_value <z_disp_boundary_value>`                                                                                                                                                                  Z-Displacement Boundary Value.

:ref:`uds_1_child <uds_1_child>`                                                                                                                                                                                         'child_object_type' of uds.

:ref:`pressure_jump_profile <pressure_jump_profile>`                                                                                                                                                                          Pressure Jump Profile.

:ref:`tangential_velocity_profile <tangential_velocity_profile>`                                                                                                                                                        Tangential Velocity Profile.

:ref:`radial_velocity_profile <radial_velocity_profile>`                                                                                                                                                                    Radial Velocity Profile.

:ref:`gauge_total_pressure <gauge_total_pressure>`                                                                                                                                                                             Gauge Total Pressure.

:ref:`supersonic_or_initial_gauge_pressure <supersonic_or_initial_gauge_pressure>`                                                                                                                                Supersonic/Initial Gauge Pressure.

:ref:`direction_vector_child <direction_vector_child>`                                                                                                                                                      'child_object_type' of direction_vector.

:ref:`modified_turbulent_viscosity <modified_turbulent_viscosity>`                                                                                                                                                     Modified Turbulent Viscosity.

:ref:`laminar_kinetic_energy <laminar_kinetic_energy>`                                                                                                                                                                       Laminar Kinetic Energy.

:ref:`intermittency <intermittency>`                                                                                                                                                                                                  Intermittency.

:ref:`turbulent_kinetic_energy <turbulent_kinetic_energy>`                                                                                                                                                                 Turbulent Kinetic Energy.

:ref:`turbulent_dissipation_rate <turbulent_dissipation_rate>`                                                                                                                                                           Turbulent Dissipation Rate.

:ref:`specific_dissipation_rate <specific_dissipation_rate>`                                                                                                                                                              Specific Dissipation Rate.

:ref:`velocity_variance_scale <velocity_variance_scale>`                                                                                                                                                                    Velocity Variance Scale.

:ref:`turbulent_viscosity_ratio_profile <turbulent_viscosity_ratio_profile>`                                                                                                                                              Turbulent Viscosity Ratio.

:ref:`uu_reynolds_stresses <uu_reynolds_stresses>`                                                                                                                                                                             UU Reynolds Stresses.

:ref:`vv_reynolds_stresses <vv_reynolds_stresses>`                                                                                                                                                                             VV Reynolds Stresses.

:ref:`ww_reynolds_stresses <ww_reynolds_stresses>`                                                                                                                                                                             WW Reynolds Stresses.

:ref:`uv_reynolds_stresses <uv_reynolds_stresses>`                                                                                                                                                                             UV Reynolds Stresses.

:ref:`vw_reynolds_stresses <vw_reynolds_stresses>`                                                                                                                                                                             VW Reynolds Stresses.

:ref:`uw_reynolds_stresses <uw_reynolds_stresses>`                                                                                                                                                                             UW Reynolds Stresses.

:ref:`total_temperature <total_temperature>`                                                                                                                                                                                      Total temperature.

:ref:`mixture_fraction <mixture_fraction>`                                                                                                                                                                                         Mixture fraction.

:ref:`mode_2_probability <mode_2_probability>`                                                                                                                                                                                   Mode-2 probability.

:ref:`mode_3_probability <mode_3_probability>`                                                                                                                                                                                   Mode-3 probability.

:ref:`species_mass_fraction_child <species_mass_fraction_child>`                                                                                                                                       'child_object_type' of species_mass_fraction.

:ref:`progress_variable <progress_variable>`                                                                                                                                                                                      Progress Variable.

:ref:`progress_variable_variance <progress_variable_variance>`                                                                                                                                                           Progress Variable Variance.

:ref:`flame_area_density <flame_area_density>`                                                                                                                                                                                   Flame Area Density.

:ref:`inert_stream <inert_stream>`                                                                                                                                                                                                     Inert Stream.

:ref:`pollutant_no_mass_fraction <pollutant_no_mass_fraction>`                                                                                                                                                           Pollutant NO Mass Fraction.

:ref:`pollutant_hcn_mass_fraction <pollutant_hcn_mass_fraction>`                                                                                                                                                        Pollutant HCN Mass Fraction.

:ref:`pollutant_nh3_mass_fraction <pollutant_nh3_mass_fraction>`                                                                                                                                                        Pollutant NH3 Mass Fraction.

:ref:`pollutant_n2o_mass_fraction <pollutant_n2o_mass_fraction>`                                                                                                                                                        Pollutant N2O Mass Fraction.

:ref:`pollutant_urea_mass_fraction <pollutant_urea_mass_fraction>`                                                                                                                                                     Pollutant UREA Mass Fraction.

:ref:`pollutant_hnco_mass_fraction <pollutant_hnco_mass_fraction>`                                                                                                                                                     Pollutant HNCO Mass Fraction.

:ref:`pollutant_nco_mass_fraction <pollutant_nco_mass_fraction>`                                                                                                                                                        Pollutant NCO Mass Fraction.

:ref:`pollutant_so2_mass_fraction <pollutant_so2_mass_fraction>`                                                                                                                                                        Pollutant SO2 Mass Fraction.

:ref:`pollutant_h2s_mass_fraction <pollutant_h2s_mass_fraction>`                                                                                                                                                        Pollutant H2S Mass Fraction.

:ref:`pollutant_so3_mass_fraction <pollutant_so3_mass_fraction>`                                                                                                                                                        Pollutant SO3 Mass Fraction.

:ref:`pollutant_sh_mass_fraction <pollutant_sh_mass_fraction>`                                                                                                                                                           Pollutant SH Mass Fraction.

:ref:`pollutant_so_mass_fraction <pollutant_so_mass_fraction>`                                                                                                                                                           Pollutant SO Mass Fraction.

:ref:`soot_mass_fraction <soot_mass_fraction>`                                                                                                                                                                                   Soot Mass Fraction.

:ref:`nuclei <nuclei>`                                                                                                                                                                                                                       Nuclei.

:ref:`tar_mass_fraction <tar_mass_fraction>`                                                                                                                                                                                      Tar Mass Fraction.

:ref:`pollutant_hg_mass_fraction <pollutant_hg_mass_fraction>`                                                                                                                                                           Pollutant HG Mass Fraction.

:ref:`pollutant_hgcl2_mass_fraction <pollutant_hgcl2_mass_fraction>`                                                                                                                                                  Pollutant HGCL2 Mass Fraction.

:ref:`pollutant_hcl_mass_fraction <pollutant_hcl_mass_fraction>`                                                                                                                                                        Pollutant HCL Mass Fraction.

:ref:`pollutant_hgo_mass_fraction <pollutant_hgo_mass_fraction>`                                                                                                                                                        Pollutant HGO Mass Fraction.

:ref:`pollutant_cl_mass_fraction <pollutant_cl_mass_fraction>`                                                                                                                                                           Pollutant CL Mass Fraction.

:ref:`pollutant_cl2_mass_fraction <pollutant_cl2_mass_fraction>`                                                                                                                                                        Pollutant CL2 Mass Fraction.

:ref:`pollutant_hgcl_mass_fraction <pollutant_hgcl_mass_fraction>`                                                                                                                                                     Pollutant HGCL Mass Fraction.

:ref:`pollutant_hocl_mass_fraction <pollutant_hocl_mass_fraction>`                                                                                                                                                     Pollutant HOCL Mass Fraction.

:ref:`ht_bottom <ht_bottom>`                                                                                                                                                                                                           Bottom Level.

:ref:`ht_total <ht_total>`                                                                                                                                                                                                             Total Height.

:ref:`vmag <vmag>`                                                                                                                                                                                                               Velocity Magnitude.

:ref:`granular_temperature <granular_temperature>`                                                                                                                                                                             Granular temperature.

:ref:`interfacial_area_concentration <interfacial_area_concentration>`                                                                                                                                               Interfacial area concentration.

:ref:`level_set_function_flux <level_set_function_flux>`                                                                                                                                                                    Level-set Function Flux.

:ref:`volume_fraction <volume_fraction>`                                                                                                                                                                                            Volume Fraction.

:ref:`relative_humidity <relative_humidity>`                                                                                                                                                                                      Relative humidity.

:ref:`liquid_mass_fraction <liquid_mass_fraction>`                                                                                                                                                                             Liquid Mass Fraction.

:ref:`log10_droplets_per_unit_volume <log10_droplets_per_unit_volume>`                                                                                                                                              Log10(Droplets Per Unit Volume).

:ref:`mass_flow_rate_1 <mass_flow_rate_1>`                                                                                                                                                                                           Mass Flow Rate.

:ref:`exit_corrected_mass_flow_rate <exit_corrected_mass_flow_rate>`                                                                                                                                                  Exit Corrected Mass Flow Rate.

:ref:`mass_flux <mass_flux>`                                                                                                                                                                                                              Mass Flux.

:ref:`supersonic_gauge_pressure <supersonic_gauge_pressure>`                                                                                                                                                                         Gauge Pressure.

:ref:`total_temperature_1 <total_temperature_1>`                                                                                                                                                                                        Temperature.

:ref:`phase_velocity_ratio <phase_velocity_ratio>`                                                                                                                                                                            Phase Velocity Ratio .

:ref:`temperature_3 <temperature_3>`                                                                                                                                                                                                    Temperature.

:ref:`q <q>`                                                                                                                                                                                                                              Heat Flux.

:ref:`v_absp <v_absp>`                                                                                                                                                                                                Direct Visible (Absorptivity).

:ref:`ir_absp <ir_absp>`                                                                                                                                                                                                   Direct IR (Absorptivity).

:ref:`ir_trans <ir_trans>`                                                                                                                                                                                               Direct IR (Transmissivity).

:ref:`v_trans <v_trans>`                                                                                                                                                                                            Direct Visible (Transmissivity).

:ref:`contact_angles_child <contact_angles_child>`                                                                                                                                                            'child_object_type' of contact_angles.

:ref:`mach_number <mach_number>`                                                                                                                                                                                                        Mach Number.

:ref:`vibrational_electronic_temperature <vibrational_electronic_temperature>`                                                                                                                                   Vibrational-Electronic Temperature.

:ref:`temperature_rise <temperature_rise>`                                                                                                                                                                                         Temperature Rise.

:ref:`heat_source <heat_source>`                                                                                                                                                                                                        Heat Source.

:ref:`species_mass_fractions_child <species_mass_fractions_child>`                                                                                                                                    'child_object_type' of species_mass_fractions.

:ref:`avg_flow_velocity <avg_flow_velocity>`                                                                                                                                                                       Averaged Flow Velocity Magnitude.

:ref:`velocity_magnitude <velocity_magnitude>`                                                                                                                                                                                   Velocity Magnitude.

:ref:`initial_gauge_pressure <initial_gauge_pressure>`                                                                                                                                                                               Gauge Pressure.

:ref:`velocity_components_child <velocity_components_child>`                                                                                                                                             'child_object_type' of velocity_components.

:ref:`moving_object_velocity <moving_object_velocity>`                                                                                                                                                            Moving Object: Velocity Magnitude.

:ref:`moving_object_direction_child <moving_object_direction_child>`                                                                                                                                 'child_object_type' of moving_object_direction.

:ref:`primary_phase_velocity <primary_phase_velocity>`                                                                                                                                                            Primary Phase: Velocity Magnitude.

:ref:`primary_phase_direction_child <primary_phase_direction_child>`                                                                                                                                 'child_object_type' of primary_phase_direction.

:ref:`secondary_phase_velocity <secondary_phase_velocity>`                                                                                                                                                      Secondary Phase: Velocity Magnitude.

:ref:`secondary_phase_direction_child <secondary_phase_direction_child>`                                                                                                                           'child_object_type' of secondary_phase_direction.

:ref:`vibrational_electronic_temperature_1 <vibrational_electronic_temperature_1>`                                                                                                                                                      Temperature.

:ref:`flow_velocity_child <flow_velocity_child>`                                                                                                                                                               'child_object_type' of flow_velocity.

:ref:`primary_phase_reference_velocity <primary_phase_reference_velocity>`                                                                                                                              Primary Phase: Reference Velocity Magnitude.

:ref:`reference_direction_child <reference_direction_child>`                                                                                                                                             'child_object_type' of reference_direction.

:ref:`wave_ht <wave_ht>`                                                                                                                                                                                                                    Element.

:ref:`wave_len <wave_len>`                                                                                                                                                                                                                  Element.

:ref:`phase_diff <phase_diff>`                                                                                                                                                                                                              Element.

:ref:`heading_angle <heading_angle>`                                                                                                                                                                                                        Element.

:ref:`offset_7 <offset_7>`                                                                                                                                                                                                                  Element.

:ref:`significant_wave_height <significant_wave_height>`                                                                                                                                                                    Significant Wave Height.

:ref:`peak_frequency <peak_frequency>`                                                                                                                                                                                               Peak Frequency.

:ref:`minimum_frequency <minimum_frequency>`                                                                                                                                                                                      Minimum Frequency.

:ref:`maximum_frequency <maximum_frequency>`                                                                                                                                                                                      Maximum Frequency.

:ref:`mean_wave_heading_angle <mean_wave_heading_angle>`                                                                                                                                                                    Mean Wave Heading Angle.

:ref:`angular_deviation <angular_deviation>`                                                                                                                                                                                      Angular Deviation.

:ref:`pb_disc_components_child <pb_disc_components_child>`                                                                                                                                                'child_object_type' of pb_disc_components.

:ref:`speed <speed>`                                                                                                                                                                                                             Velocity Magnitude.

:ref:`rotation_speed <rotation_speed>`                                                                                                                                                                                               Rotation Speed.

:ref:`periodic_displacement_child <periodic_displacement_child>`                                                                                                                                       'child_object_type' of periodic_displacement.

:ref:`periodic_imaginary_displacement_child <periodic_imaginary_displacement_child>`                                                                                                         'child_object_type' of periodic_imaginary_displacement.

:ref:`frequency_1 <frequency_1>`                                                                                                                                                                                 Frequency of Periodic Displacement.

:ref:`amplitude_1 <amplitude_1>`                                                                                                                                                                                 Amplitude of Periodic Displacement.

:ref:`passage_number <passage_number>`                                                                                                                                                                     Passage Number for Periodic Displacement.

:ref:`force_real_component_child <force_real_component_child>`                                                                                                                                          'child_object_type' of force_real_component.

:ref:`force_imaginary_component_child <force_imaginary_component_child>`                                                                                                                           'child_object_type' of force_imaginary_component.

:ref:`shear_stress_child <shear_stress_child>`                                                                                                                                                                  'child_object_type' of shear_stress.

:ref:`roughness_height <roughness_height>`                                                                                                                                                                                    Wall Roughness Height.

:ref:`roughness_const <roughness_const>`                                                                                                                                                                                    Wall Roughness Constant.

:ref:`roughness_height_cp <roughness_height_cp>`                                                                                                                                                                              Wall Roughness Height.

:ref:`roughness_const_cp <roughness_const_cp>`                                                                                                                                                                              Wall Roughness Constant.

:ref:`roughness_const_nasa <roughness_const_nasa>`                                                                                                                                                                          Wall Roughness Constant.

:ref:`roughness_const_shin <roughness_const_shin>`                                                                                                                                                                          Wall Roughness Constant.

:ref:`roughness_const_data <roughness_const_data>`                                                                                                                                                                          Wall Roughness Constant.

:ref:`variable_roughness <variable_roughness>`                                                                                                                                                                Variable Roughness Profile from ICE3D.

:ref:`liquid_content <liquid_content>`                                                                                                                                                                                  Liquid Content (in [g/m^3]).

:ref:`liquid_content_cp <liquid_content_cp>`                                                                                                                                                                            Liquid Content (in [g/m^3]).

:ref:`droplet_diameter <droplet_diameter>`                                                                                                                                                                               Droplet Diameter (microns).

:ref:`heat_flux_1 <heat_flux_1>`                                                                                                                                                                                                          Heat Flux.

:ref:`heat_transfer_coeff_1 <heat_transfer_coeff_1>`                                                                                                                                                           Convective Heat Transfer Coefficient.

:ref:`free_stream_temp_1 <free_stream_temp_1>`                                                                                                                                                                              Free Stream Temperature.

:ref:`external_emissivity <external_emissivity>`                                                                                                                                                                                         Emissivity.

:ref:`ext_rad_temperature <ext_rad_temperature>`                                                                                                                                                                     External Radiation Temperature.

:ref:`wall_thickness <wall_thickness>`                                                                                                                                                                                               Wall Thickness.

:ref:`heat_generation_rate <heat_generation_rate>`                                                                                                                                                                             Heat Generation Rate.

:ref:`qdot <qdot>`                                                                                                                                                                                                                          Element.

:ref:`thickness_1 <thickness_1>`                                                                                                                                                                                                            Element.

:ref:`area_enhancement_factor <area_enhancement_factor>`                                                                                                                                                                    Area Enhancement Factor.

:ref:`contact_resistance_1 <contact_resistance_1>`                                                                                                                                                                               Contact Resistance.

:ref:`caf <caf>`                                                                                                                                                                                                     Convective Augmentation Factor.

:ref:`internal_emissivity_band_child <internal_emissivity_band_child>`                                                                                                                              'child_object_type' of internal_emissivity_band.

:ref:`v_transmissivity <v_transmissivity>`                                                                                                                                                                          Direct Visible (Transmissivity).

:ref:`ir_transmissivity <ir_transmissivity>`                                                                                                                                                                             Direct IR (Transmissivity).

:ref:`d_transmissivity <d_transmissivity>`                                                                                                                                                                   Diffuse Hemispherical (Transmissivity).

:ref:`v_opq_absorbtivity <v_opq_absorbtivity>`                                                                                                                                                                        Direct Visible (Absorptivity).

:ref:`v_st_absorbtivity <v_st_absorbtivity>`                                                                                                                                                                          Direct Visible (Absorptivity).

:ref:`ir_opq_absorbtivity <ir_opq_absorbtivity>`                                                                                                                                                                           Direct IR (Absorptivity).

:ref:`ir_st_absorbtivity <ir_st_absorbtivity>`                                                                                                                                                                             Direct IR (Absorptivity).

:ref:`d_st_absorbtivity <d_st_absorbtivity>`                                                                                                                                                                   Diffuse Hemispherical (Absorptivity).

:ref:`partially_catalytic_recombination_coefficient_o <partially_catalytic_recombination_coefficient_o>`                                                                                                            Recombination Coefficient For o.

:ref:`partially_catalytic_recombination_coefficient_n <partially_catalytic_recombination_coefficient_n>`                                                                                                            Recombination Coefficient For n.

:ref:`species_mass_fraction_or_flux_child <species_mass_fraction_or_flux_child>`                                                                                                               'child_object_type' of species_mass_fraction_or_flux.

:ref:`film_height_1 <film_height_1>`                                                                                                                                                                                                    Film Height.

:ref:`flux_momentum_child <flux_momentum_child>`                                                                                                                                                               'child_object_type' of flux_momentum.

:ref:`film_temperature_1 <film_temperature_1>`                                                                                                                                                                                     Film Temperature.

:ref:`film_passive_scalar <film_passive_scalar>`                                                                                                                                                                                     Passive Scalar.

:ref:`film_mass_source <film_mass_source>`                                                                                                                                                                                         Film Mass Source.

:ref:`momentum_source_child <momentum_source_child>`                                                                                                                                                         'child_object_type' of momentum_source.

:ref:`film_heat_source <film_heat_source>`                                                                                                                                                                                         Film Heat Source.

:ref:`film_passive_scalar_source <film_passive_scalar_source>`                                                                                                                                                           Film Passive Scalar Source.

:ref:`film_condensation_rate <film_condensation_rate>`                                                                                                                                                                       Film Condensation Rate.

:ref:`film_vaporization_rate <film_vaporization_rate>`                                                                                                                                                                       Film Vaporization Rate.

:ref:`film_contact_angle_mean <film_contact_angle_mean>`                                                                                                                                                                    Film Contact Angle Mean.

:ref:`nec_user_deposition_rate <nec_user_deposition_rate>`                                                                                                                               Value or expression for user-defined deposition rate model.

:ref:`nec_deposition_rate_distance <nec_deposition_rate_distance>`                                                                                                                      Point distance from the wall for deposition rate evaluation.

:ref:`g_temperature <g_temperature>`                                                                                                                                                                                           Granular Temperature.

:ref:`g_qflux <g_qflux>`                                                                                                                                                                                                              Granular Flux.

:ref:`static_angle <static_angle>`                                                                                                                                                                                                          Element.

:ref:`advancing_angle_limit <advancing_angle_limit>`                                                                                                                                                                                        Element.

:ref:`receding_angle_limit <receding_angle_limit>`                                                                                                                                                                                          Element.

:ref:`elec_potential_jump <elec_potential_jump>`                                                                                                                                                                                     Potential Jump.

:ref:`elec_potential_resistance <elec_potential_resistance>`                                                                                                                                                                     Contact Resistance.

:ref:`lithium_boundary_value <lithium_boundary_value>`                                                                                                                                                                       Lithium Boundary Value.

:ref:`fensapice_ice_beta <fensapice_ice_beta>`                                                                                                                                                 Sets the collection efficiency for icing simulations.

:ref:`fensapice_ice_film_height <fensapice_ice_film_height>`                                                                                                                                             Sets the film height for icing simulations.

:ref:`fensapice_ice_instant_ice <fensapice_ice_instant_ice>`                                                                                                                                      Sets the instant ice growth for icing simulations.

:ref:`fensapice_ice_ice_thickness <fensapice_ice_ice_thickness>`                                                                                                                                       Sets the ice thickness for icing simulations.

:ref:`fensapice_ice_film_velx <fensapice_ice_film_velx>`                                                                                                                                             Sets the film x-velocity for icing simulations.

:ref:`fensapice_ice_film_vely <fensapice_ice_film_vely>`                                                                                                                                             Sets the film y-velocity for icing simulations.

:ref:`fensapice_ice_film_velz <fensapice_ice_film_velz>`                                                                                                                                             Sets the film z-velocity for icing simulations.

:ref:`fensapice_ice_film_temp <fensapice_ice_film_temp>`                                                                                                                                            Sets the film temperature for icing simulations.

:ref:`fensapice_ice_film_reinj <fensapice_ice_film_reinj>`                                                                                                                                     Sets the film reinjection mass for icing simulations.

:ref:`fensapice_ice_bead_height <fensapice_ice_bead_height>`                                                                                                                                             Sets the bead height for icing simulations.

:ref:`species_mass_fraction_1_child <species_mass_fraction_1_child>`                                                                                                                                   'child_object_type' of species_mass_fraction.

========================================================================================================   =========================================================================================================================================

